--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/voice": "^1.1.9",
     "expo": "~54.0.9",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-voice": "^0.3.0"
   },
   "private": true
 }
