--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@jamsch/expo-speech-recognition": "^0.2.15",
     "@react-native-community/voice": "^1.1.9",
+    "@react-native-voice/voice": "^3.2.4",
     "expo": "~54.0.9",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
