--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@jamsch/expo-speech-recognition": "^0.2.15",
@@ -15,6 +16,7 @@
     "expo": "~54.0.10",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "patch-package": "^8.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-voice": "^0.3.0"
